[package]
name = "ulid"
version = "1.0.0"
authors = ["dylanhart <dylan96hart@gmail.com>"]
edition = "2018"

license = "MIT"
readme = "README.md"

description = "a Universally Unique Lexicographically Sortable Identifier implementation"
keywords = ["ulid", "uuid", "sortable", "identifier"]

repository = "https://github.com/dylanhart/ulid-rs"

[features]
default = ["std"]
std = ["rand"]
diesel = ["dep:diesel", "uuid"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
rand = { version = "0.8", optional = true }
uuid = { version = "1.1", optional = true }
diesel = { version = "2.0", default-features = false, features = ["postgres_backend", "uuid"], optional = true }

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[workspace]
members = ["cli"]

[package.metadata.docs.rs]
all-features = true
